--- a/_posts/2024-05-28-blog-four.md
+++ b/_posts/2024-05-28-blog-four.md
@@ -6,7 +6,7 @@ categories: [home]
 
 # Fourth Design
 
-![Design One](/assets/lib/images/design13.png)
+![Design One](/assets/lib/design13.png)
 
 I like this design as it is very unique, and the user is able to interact with it by moving their mouse. The lower the mouse is to the bottom of the screen, the closer the points will appear. The design shows several bright colours, in a star field. I believe that of all three, this is my favourite design of them all. I like the concept of it being a star field, with a vast variety of different colours that appear to come closer to the screen with mouse movement.
 <pre>
@@ -54,10 +54,10 @@ function draw() {
 </pre>
 Looking at the code, we can see that the variables are declared, both victors and factor. Victor is an array containing objects representing the points. Factor is used to determine the starting position of the points. Each vector has their random coordinates distributed on the canvas. In addition, the z coordinate controls the depth of the point. Line 18 is used to move back to the centre of the canvas. The maxSize is used by mapping the Y position of the mouse, resulting in a range of circles, they will be larger when the mouse is lower. Line 32 is used to decrease the z value, resulting in the point moving towards the user. 
 
-![Design Two](/assets/lib/images/design14.png)
+![Design Two](/assets/lib/design14.png)
 
 I changed the value on line 32 from -5, 5 to -2, 2. This resulted in the colours being a solid colour when the mouse is moved to the bottom of the screen, however, remain normal otherwise.
 
-![Design Three](/assets/lib/images/design15.png)
+![Design Three](/assets/lib/design15.png)
 
 I changed line 24 from -15 to 100, resulting in changing the size of the circles to full size ‘blobs’.
