--- a/_posts/2024-05-28-blog-one.md
+++ b/_posts/2024-05-28-blog-one.md
@@ -6,7 +6,7 @@ categories: [home]
 
 # First Design
 
-![Design One](/assets/lib/images/design8.png)
+![Design One](/assets/lib/design8.png)
 
 I created this design with the simple idea of having something incredibly basic, and seeing how much it can change, by using the same type of shapes. As a result, this is simply a black background with a white square positioned in the middle.
 <pre>
@@ -25,7 +25,7 @@ function draw(){
 </pre>
 The code here simply creates a white square at the location given. 
 
-![Design Two](/assets/lib/images/design5.png)
+![Design Two](/assets/lib/design5.png)
 
 
 <pre>
@@ -56,11 +56,11 @@ function draw() {
 </pre>
 Starting off, variables are declared including the minLineWidth, maxLineWidth and lineWidthChange. I decided to set the framerate to 1. In addition, line 15 is used to create a line width a random value between the minLineWidth and the maxLineWidth. I then decided to use a for loop to iterate the code. The code on line 17 is used to adjust the lineWidth by a random value.  Finally, the code on line 20 is used to draw a horizontal line centred on the canvas. This design is my favourite out of all four as it is the most well rounded and visually pleasing.
 
-![Design Two](/assets/lib/images/design6.png)
+![Design Two](/assets/lib/design6.png)
 
 Starting off, I adjusted the frame rate from 60 to 1. This means that it will refresh 60 times per second, rather than 1. Thus, making the lines appear 60 times quicker. I changed the +lineWidthChange to –. Although I’m not completely sure how it worked, it increased the size of the black margins and therefore made the centre white rectangle smaller. 
 
-![Design Three](/assets/lib/images/design7.png)
+![Design Three](/assets/lib/design7.png)
 
 This time, I decided to make the design non-symmetrical. Shifting the white area to the left side. I was able to do this by change the width from being divided by 2 to 50 and the lineY width from 2 to 20 as well. Other than that, everything remained the same. 
 
